--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "agora-gui-common",
   "version": "0.0.0",
+  "scripts": {
+    "grunt": "grunt"
+  },
   "devDependencies": {
     "grunt": "~0.4",
     "grunt-angular-templates": "~0.5",
     "grunt-autoprefixer": "^1.0.1",
     "grunt-browser-output": "0.1.0",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "~0.5",
     "grunt-contrib-concat": "~0.5",
     "grunt-contrib-connect": "~0.6",
