--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "bootstrap": "~3.1",
     "font-awesome": "~4.3",
     "moment": "~2.5",
-    "angular-mocks": "~1.2"
+    "angular-mocks": "~1.2",
+    "angular-nvd3": "^1.0.9"
   },
   "devDependencies": {
     "jquery": "~2.0",
